# Chimera

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  ENV_QUICK_REF.md  ENV_SETUP.md  IMPLEMENTATION_STATUS.md  LOOM_SCRIPT.md  Makefile  Project_Chimera_3Day_Challenge.md  README.md  SUBMISSION_REPORT.md  pyproject.toml  run_orchestrator.py
.cursor/rules/: agent.mdc  project_rules.mdc
.github/workflows/: main.yml
chimera/agents/: cfo_judge.py  judge.py  planner.py  worker.py
chimera/api/: main.py
chimera/api/routes/: fleet.py  hitl.py
chimera/core/: commerce.py  database.py  llm.py  memory.py  models.py  orchestrator.py  perception.py  persona.py  queues.py  state.py  validation.py
chimera/mcp/: client.py  server.py
chimera/mcp/servers/: coinbase_server.py  commerce.py  (+4 more)
frontend/: package-lock.json
frontend/src/: App.tsx
personas/example_agent/: SOUL.md
research/: architecture_strategy.md  tooling_strategy.md
scripts/: list_models.py  run_autonomous_loop.py  test_planner_llm.py  test_worker_dynamic.py  validate_connections.py  validate_env.py  verify_image_gen.py  verify_news.py
skills/: README.md  skill_fetch_trends.md  skill_generate_image.md  skill_social_action.md
specs/: _meta.md  acceptance.md  frontend_contracts.md  functional.md  openclaw_integration.md  security.md  technical.md
tests/: test_core_agents.py  test_database_integration.py  test_economic_agency.py  test_fractal_scalability.py  test_mcp_integration.py  test_persona.py  test_skills_interface.py  test_social_mcp.py  test_state_occ.py  test_trend_fetcher.py
(+2 files in other folders)
